# fullstack-test-task

backend/: pyproject.toml
backend/migrations/: env.py
backend/src/: app.py  config.py  database.py  models.py  schemas.py  service.py  tasks.py
backend/src/repositories/: __init__.py  alert_repo.py  file_repo.py
backend/src/routes/: __init__.py  alerts.py  files.py
backend/src/services/: __init__.py  file_service.py  scan_service.py
frontend/src/api/: filesApi.ts
frontend/src/app/: page.tsx
frontend/src/components/: AlertsTable.tsx  FileUploadModal.tsx  FilesTable.tsx  PageHeader.tsx
frontend/src/hooks/: useData.ts  useFileUpload.ts
frontend/src/lib/: formatting.ts
