[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.ruff]
exclude = ["migrations/versions"]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # конфликт с D211
    "D212", # конфликт с D213
    "INP001",
    "S105",
    "PLW0603",
    "RUF002", # ложное срабатывание - кириллица в docstring
    "TC001",
    "TC002",
    "TC003",
]
